# terminaut

./: .gitignore  Cargo.toml  README.md
apps/macos/Terminaut/: Package.swift
apps/macos/Terminaut/Sources/TerminautApp/: TerminautApp.swift
apps/macos/Terminaut/Sources/TerminautApp/Models/: Models.swift
apps/macos/Terminaut/Sources/TerminautApp/Services/: AppState.swift  CoreClient.swift  TerminalLauncher.swift
apps/macos/Terminaut/Sources/TerminautApp/Views/: ContentView.swift
apps/macos/Terminaut/Tests/TerminautAppTests/: TerminautAppTests.swift
crates/term-core/: Cargo.toml
crates/term-core-cli/: Cargo.toml
crates/term-core-cli/src/: main.rs
crates/term-core/src/: lib.rs
