[package]
name = "term-core-cli"
version = "0.1.0"
edition = "2021"
description = "CLI shim that exposes term-core capabilities over JSON for the Swift UI shell."
authors = ["Terminaut Developers"]
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
term-core = { path = "../term-core" }
uuid = { version = "1", features = ["v4"] }
