[package]
name = "term-core"
version = "0.1.0"
edition = "2021"
description = "Rust core library for Terminaut, providing path utilities and launch metadata."
authors = ["Terminaut Developers"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ignore = "0.4"
fuzzy-matcher = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
